Se añadio un boton para enviar, usando javascript

--- a/encuesta.html
+++ b/encuesta.html
@@ -22,6 +22,12 @@
     <h2 id="TituloEncuesta">Encuesta</h2>
     <img src="https://media1.tenor.com/m/KqRdJDTdI0oAAAAC/application-wife.gif" alt="">
     <p>Te invitamos a poner tus datos en esta mini encuesta para saber mas de ti y tus preferencias</p>
+    <!-- Boton para enviar tu formulario -->
+    <form id="formulario">
+        <div id="mensaje-container"></div> <button type="submit" id="botonEnviar">Enviar</button>
+    </form>
+    <script src="script.js"></script>
+
     <form action="">
         <!-- Etiqueta para poner tu nombre -->
         <fieldset> 
@@ -97,10 +103,6 @@
             <input type="checkbox" id="terminos" name="terminos" required>
             Acepto los términos y condiciones.
         </label>
-    </fieldset>
-
-    <!-- Boton para enviar el formulario -->
-    <button type="submit">Enviar</button>
-    </form>
+    </fieldset> 
 </body>
 </html>
